Change command name to be "react-chat"

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Stefan Blos",
   "license": "ISC",
   "bin": {
-    "setup-project": "./setup-script.js"
+    "react-chat": "./setup-script.js"
   },
   "release": {
     "branches": [
